Fixed conflicts between intro fade on mobile vs desktop
Also added culling to the parallax and waypoint directives.

--- a/src/public/assets/styles/_landing.scss
+++ b/src/public/assets/styles/_landing.scss
@@ -93,20 +93,20 @@
     padding-top: 220%;
     margin-top: -5%;
     top: 50%;
+
+    .landing__bg-linear-fade {
+      display: block;
+    }
   }
 }
 
 .landing__bg-linear-fade {
   display: none;
-
-  @include for-desktop-up() {
-    display: block;
-    position: absolute;
-    top: 70%;
-    bottom: 0;
-    background: linear-gradient(to bottom, rgba(53, 53, 53, 0) 0, #353535 100%);
-    width: 100%;
-  }
+  position: absolute;
+  top: 70%;
+  bottom: 0;
+  background: linear-gradient(to bottom, rgba(53, 53, 53, 0) 0, #353535 100%);
+  width: 100%;
 }
 
 .landing__bg--mobile {
@@ -138,6 +138,10 @@
   &.waypoint--active + .landing .landing__bg {
     opacity: 0;
   }
+
+  @include for-desktop-up() {
+    display: none;
+  }
 }
 
 .landing__mobile-tasting-table {
@@ -150,6 +154,18 @@
   padding-top: 220%;
   width: 100%;
   z-index: -2;
+
+  .landing__bg-linear-fade {
+    display: block;
+  }
+
+  @include for-desktop-up() {
+    display: none;
+
+    .landing__bg-linear-fade {
+      display: none;
+    }
+  }
 }
 
 .landing__box {
