--- a/src/public/assets/styles/_quotes.scss
+++ b/src/public/assets/styles/_quotes.scss
@@ -1,7 +1,6 @@
 $quote-min-height: 200 * 1px;
 
 .quotes {
-  background: $black;
   color: $white-off;
   position: relative;
 
